refactor : apply GetDrinkPreviewResponse